--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;;
+    background-color: lightgray;
 }
 .top-container {
     width: auto;
@@ -11,9 +12,9 @@
 }
 
 .container-search {
-    width: 400px;
+    width: 300px;
     height: 100px;
-    border-style:dotted;
+    border-style:solid;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -21,12 +22,18 @@
     flex-direction: row;
     align-content: center;
     justify-content: center;
-    position: fixed;
+    position: relative;
+    background-color: gray;
+    color: black;
+    margin: 10px;
 }
 
 .searchbar {
     border-radius: 10px;
     height: 30px;
+    background-color: gray;
+    color: black;
+    font-weight: 5px;
 }
 
 .searchBtn {
@@ -35,4 +42,38 @@
     padding: 2px;
     height: 30px;
     border-radius: 10px;
+    background-color: gray;
+    color: black;
+}
+
+h2 {
+    background-color: gray;
+    color: black;
+}
+
+.results-area {
+    width: 300px;
+    height: 600px;
+    background-color: aqua;
+    position: relative;
+    margin: 10px;
+    border-radius: 10px;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.cityBtn {
+    Width: auto;
+    height: auto;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.weather-forecast-container {
+    position: relative;
+    
 }
