--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,10 @@
     margin: 10px;
 }
 
+.search-form {
+    width: auto;
+}
+
 .searchbar {
     border-radius: 10px;
     height: 30px;
@@ -53,7 +57,7 @@ h2 {
 
 .results-area {
     width: 300px;
-    height: 600px;
+    height: 300px;
     background-color: aqua;
     position: relative;
     margin: 10px;
@@ -75,5 +79,34 @@ h2 {
 
 .weather-forecast-container {
     position: relative;
+    
+}
+
+.city-forecast {
+    width: 500px;
+    height: 500px;
+    background-color: aliceblue;
+    position: relative;
+    display: flex;
+    right: 100px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: stretch;
+    position: fixed;
+}
+
+.fiveday-forcast-container {
+    width: 500px;
+    height: 500px;
+    background-color: rgb(35, 132, 218);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: stretch;
     
 }
